# quill

./: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  vite.config.ts
docs/: code-standards.md  codebase-summary.md  prd.md  project-overview-pdr.md  system-architecture.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: import.rs  mod.rs  provider.rs  query.rs  schema.rs  tunnel.rs
src-tauri/src/db/: connection.rs  executor.rs
src-tauri/src/models/: mod.rs  provider_result.rs  query_result.rs
src-tauri/src/providers/: mod.rs  registry.rs  sql_traits.rs  traits.rs
src-tauri/src/providers/mysql/: mod.rs  provider.rs  schema.rs  types.rs
src-tauri/src/providers/postgres/: mod.rs  provider.rs
src-tauri/src/providers/sqlite/: mod.rs  provider.rs
src-tauri/src/tunnel/: config.rs  manager.rs  mod.rs  ssh.rs
src/hooks/: index.ts  useCommandPalette.ts  useCommandPaletteKeyboard.ts  useExecuteQuery.ts  useGlobalShortcuts.ts  useHistoryList.ts  useInlineEditing.ts  useQueryStats.ts  useTableFilter.ts  useTableList.ts  useWelcomeFilter.ts  useWorkspaceConnection.ts
src/lib/: clipboard.ts  const.ts  ddl-generator.ts  export.ts  filter-constants.ts  filter-schema.ts  keyboard-shortcuts-config.ts  provider-utils.ts  query-templates.ts  sql-autocomplete.ts  sql-filter.ts  sql-formatter.ts  storage.ts  tauri.ts  toast.ts  utils.ts  value-parser.ts
src/pages/: index.ts  (+2 more)
(+112 files in other folders)
