[package]
name = "quill"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono"] }
thiserror = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
async-trait = "0.1"
async-ssh2-lite = { version = "0.5", features = ["tokio"] }
ssh2 = "0.9"
